tests/ui/typeck/check-args-on-fn-err-2.stderr
error[E0308]: mismatched types
  --> $DIR/check-args-on-fn-err-2.rs:2:19
   |
LL |     a((), 1i32 == 2u32);
   |           ----    ^^^^ expected `i32`, found `u32`
   |           |
   |           expected because this is `i32`
   |
help: change the type of the numeric literal from `u32` to `i32`
   |
LL -     a((), 1i32 == 2u32);
LL +     a((), 1i32 == 2i32);
   |

error[E0425]: cannot find function `a` in this scope
  --> $DIR/check-args-on-fn-err-2.rs:2:5
   |
LL |     a((), 1i32 == 2u32);
   |     ^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
